public/css/player-styles.css
.player-container {
    display: flex;
    align-items: center;
    gap: 10px;
    background-color: #fff;
    padding: 15px;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    margin: 0;
}

.player-button {
    padding: 4px 7px 2px 10px;
    font-size: 30px;
    line-height: 0.9em;
    cursor: pointer;
    border: none;
    border-radius: 5px;
    background-color: #007bff;
    color: white;
    transition: background-color 0.2s;
    margin-right: 5px;
}

.player-button:hover {
    background-color: #0056b3;
}

.player-button[title=Play] {
    font-size: 27px;
    padding: 4px 10px 6px 10px;
}

.player-button[title=Play]::after {
    content: '\0023F5';
}

.player-button[title=Pause] {
    font-size: 27px;
    padding: 4px 10px 6px 10px;
}
.player-button[title=Pause]::after {
    content: '\0023F8';
}

.player-button[title=Cancel] {
    padding: 3px 10px 8px 10px;
}
.player-button[title=Cancel]::after {
    content: '\0023F9';
}

.progress-container {
    width: 200px;
    height: 10px;
    background-color: #e0e0e0;
    border-radius: 5px;
    position: relative;
    cursor: pointer;
}

.progress-bar {
    height: 100%;
    width: 0%;
    background-color: #28a745;
    border-radius: 5px;
}

.progress-handle {
    width: 20px;
    height: 20px;
    background-color: #007bff;
    border-radius: 50%;
    position: absolute;
    top: 50%;
    left: 0%;
    transform: translate(-50%, -50%);
    cursor: grab;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
}

.time-display {
    font-size: 14px;
    color: #555;
}

#time-info {
  font-family: monospace;
}

